Imported Upstream version 8.8.0